2002-06-15  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnheader.el (nnheader-file-name-translation-alist): Set the
	default value for MS Windows systems.

	* gnus-ems.el (nnheader-file-name-translation-alist): Removed.

2002-05-16  Juanma Barranquero  <lektu@terra.es>

	* gnus-art.el (gnus-mime-copy-part): Fix typo.

2002-05-09  Miles Bader  <miles@gnu.org>

	* gnus-cite.el (gnus-cite-blank-line-after-header): New variable.
	(gnus-article-hide-citation): Respect it.

2002-04-12  Juanma Barranquero  <lektu@terra.es>

	* pop3.el (pop3-open-server): Fix typo.

2002-04-12  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* pop3.el (pop3-munge-message-separator): Work if no date.
	Trivial patch from Marius Vollmer <mvo@zagadka.ping.de>.

	* pop3.el (pop3-munge-message-separator): Only use valid date.
	Trivial patch from Michael Welsh Duggan <md5i@cs.cmu.edu>.
	
2002-04-11  Stefan Monnier  <monnier@cs.yale.edu>

	* gnus-sum.el (gnus-update-summary-mark-positions)
	(gnus-summary-toggle-header):
	* gnus-uu.el (gnus-uu-binhex-article, gnus-uu-reginize-string)
	(gnus-uu-expand-numbers, gnus-uu-post-make-mime)
	(gnus-uu-post-encoded):
	* nnfolder.el (nnfolder-possibly-change-group):
	* nnimap.el (nnimap-retrieve-headers):
	* nnmbox.el (nnmbox-create-mbox): Don't assume point-min == 1.

2002-04-08  Stefan Monnier  <monnier@cs.yale.edu>

	* nnml.el (nnml-save-nov, nnml-generate-nov-file):
	* pop3.el (pop3-md5): Don't hardcode point-min == 1.

2002-04-08  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-summary-delete-marked-with): Fix typo.

2002-04-02  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-group.el (gnus-group-make-tool-bar): Load tool-bar first.

	* message.el (message-tool-bar-map): Ditto.

	* gnus-sum.el (gnus-summary-make-tool-bar): Ditto.

2002-04-01  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnwarchive.el (nnwarchive-mail-archive-article): Fix typo.

2002-03-21  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mail-source.el (make-source-make-complex-temp-name):